--- a/index.html
+++ b/index.html
@@ -6,35 +6,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css" />
   <link rel="stylesheet" href="style.css">
-  <title>Hello, world!</title>
+  <title>Zwin Rechteroever</title>
 </head>
 
 <body>
+  <header >
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-lg-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Museum</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-<header >
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      </div>
+  </header>
 
+
+<div class="container">
+    <div class="row justify-content-end row-height">
+      <div class="col-4 py-5">
+        <h2>Wat doen we?</h2>
+        <p>Verzamelen, klasseren en bewaren van de informatie over de geschiedenis van de regio tussen Damme en Brugge</p>
+        <h2>Waar?</h2>
+        <p>We hebben een centrum waar we u graag ontvangen van dindsag tot zaterdag vanaf 10uur tot 17uur, adress: Rode-Ossenstraat 123 Damme</p>
+      </div>
     </div>
-</header>
+</div>
+
 
 </body>
 
