--- a/inner/museum.html
+++ b/inner/museum.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="style.css">
-  <title>Zwin Rechteroever</title>
+  <link rel="stylesheet" href="../bootstrap-4.3.1-dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="../style.css">
+  <title>Zwin Rechteroever Museum</title>
 </head>
 
 <body>
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-lg-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Welkom <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../index.html">Welkom</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inner/museum.html">Museum</a>
+              <a class="nav-link" href="#">Museum<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -37,12 +37,21 @@
 
 
   <div class="container pt-5">
-    <div class="row justify-content-end row-height pt-5">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 py-5 info">
-        <h2>Wat doen we?</h2>
-        <p>Verzamelen, klasseren en bewaren van de informatie over de geschiedenis van de regio tussen Damme en Brugge</p>
-        <h2>Waar?</h2>
-        <p>We hebben een centrum waar we u graag ontvangen van dindsag tot zaterdag vanaf 10uur tot 17uur, adress: Rode-Ossenstraat 123 Damme</p>
+    <div class="row pt-5">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
+        <img src="" alt="">
+        <h2>Unieke locatie Veronicakapel</h2>
+        <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
+      </div>
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
+        <img src="" alt="">
+        <h2>Unieke collectie</h2>
+        <p>Wij beheren de stukken archief die niet meer in het archief zitten, hierdoor bezitten we unieke stukken zoals ellenlange geboortelijsten.</p>
+      </div>
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
+        <img src="" alt="">
+        <h2>Uitgebreidde bibliotheek</h2>
+        <p>We beschikken over een grote collectie waarvan u gebruik kan maken om bij te leren en voor onderzoek.</p>
       </div>
     </div>
   </div>
