--- a/inner/museum.html
+++ b/inner/museum.html
@@ -39,18 +39,18 @@
   <div class="container pt-5">
     <div class="row pt-5">
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="" alt="">
-        <h2>Unieke locatie Veronicakapel</h2>
+        <img src="bibliotheek.jpg" class="img-fluid" alt="Responsive image">
+        <h2  class="pt-4">Unieke locatie Veronicakapel</h2>
         <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
       </div>
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="" alt="">
-        <h2>Unieke collectie</h2>
+        <img src="bibliotheek.jpg" class="img-fluid" alt="Responsive image">
+        <h2  class="pt-4">Unieke collectie</h2>
         <p>Wij beheren de stukken archief die niet meer in het archief zitten, hierdoor bezitten we unieke stukken zoals ellenlange geboortelijsten.</p>
       </div>
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="" alt="">
-        <h2>Uitgebreidde bibliotheek</h2>
+        <img src="bibliotheek.jpg" class="img-fluid" alt="Responsive image">
+        <h2 class="pt-4">Uitgebreidde bibliotheek</h2>
         <p>We beschikken over een grote collectie waarvan u gebruik kan maken om bij te leren en voor onderzoek.</p>
       </div>
     </div>
