--- a/inner/museum.html
+++ b/inner/museum.html
@@ -39,7 +39,7 @@
   <div class="container pt-5">
     <div class="row pt-5">
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="bibliotheek.jpg" class="img-fluid" alt="Responsive image">
+        <img src="kapel.jpg" class="img-fluid" alt="Responsive image">
         <h2  class="pt-4">Unieke locatie Veronicakapel</h2>
         <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
       </div>
