--- a/inner/museum.html
+++ b/inner/museum.html
@@ -44,7 +44,7 @@
         <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
       </div>
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="bibliotheek.jpg" class="img-fluid" alt="Responsive image">
+        <img src="archief.jpg" class="img-fluid" alt="Responsive image">
         <h2  class="pt-4">Unieke collectie</h2>
         <p>Wij beheren de stukken archief die niet meer in het archief zitten, hierdoor bezitten we unieke stukken zoals ellenlange geboortelijsten.</p>
       </div>
