--- a/inner/museum.html
+++ b/inner/museum.html
@@ -37,7 +37,7 @@
 
 
   <div class="container pt-5">
-    <div class="row pt-5">
+    <div class="row pt-5 text-center">
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
         <img src="kapel.jpg" class="img-fluid" alt="Responsive image">
         <h2  class="pt-4">Unieke locatie Veronicakapel</h2>
