--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="inner/museum.html">Museum</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="inner/contact.html">Contact</a>
             </li>
           </ul>
         </div>
