--- a/inner/contact.html
+++ b/inner/contact.html
@@ -38,20 +38,17 @@
 
   <div class="container pt-5">
     <div class="row pt-5 text-center">
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="kapel.jpg" class="img-fluid" alt="Responsive image">
-        <h2  class="pt-4">Unieke locatie Veronicakapel</h2>
-        <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 px-3 py-5 info">
+        <h2 class="font-italic">Contactpagina</h2>
+        <h3>Adres</h3>
+        <p>Rode-Ossenstraat 123 Damme</p>
+        <h3>E-mailadres</h3>
+        <p>zwinrechteroever@heemskundigekring.be</p>
+        <h3>telefoonnummer</h3>
+        <p>(123) 456 7890</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="archief.jpg" class="img-fluid" alt="Responsive image">
-        <h2  class="pt-4">Unieke collectie</h2>
-        <p>Wij beheren de stukken archief die niet meer in het archief zitten, hierdoor bezitten we unieke stukken zoals ellenlange geboortelijsten.</p>
-      </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
-        <img src="bibliotheek.jpg" class="img-fluid" alt="Responsive image">
-        <h2 class="pt-4">Uitgebreidde bibliotheek</h2>
-        <p>We beschikken over een grote collectie waarvan u gebruik kan maken om bij te leren en voor onderzoek.</p>
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 px-3 py-5 info">
+        <img src="contact.jpg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
   </div>
