--- a/inner/contact.html
+++ b/inner/contact.html
@@ -38,7 +38,7 @@
 
   <div class="container pt-5">
     <div class="row pt-5 text-center">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 px-3 py-5 info">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info">
         <h2 class="font-italic">Contactpagina</h2>
         <h3>Adres</h3>
         <p>Rode-Ossenstraat 123 Damme</p>
@@ -47,7 +47,28 @@
         <h3>telefoonnummer</h3>
         <p>(123) 456 7890</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 px-3 py-5 info">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info">
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email addres</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="naam@voorbeeld.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Waarom contacteert u ons?</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>Algemene info</option>
+              <option>Archiefvragen</option>
+              <option>Lid worden</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Uw bericht</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-outline-info border-0">versturen</button>
+        </form>
+      </div>
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info">
         <img src="contact.jpg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
