--- a/inner/museum.html
+++ b/inner/museum.html
@@ -36,11 +36,13 @@
   </header>
 
 
-  <div class="container pt-5">
-    <div class="row justify-content-center">
-      <h2 class="font-italic"> Ons museum</h2>
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h2 class="font-italic"> Ons museum</h2>
+      </div>
     </div>
-    <div class="row pt-5 text-center">
+    <div class="row pt-3 text-center">
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 pl-5  py-5 info">
         <img src="kapel.jpg" class="img-fluid card-img-top" alt="Responsive image">
         <h2  class="pt-4">Unieke locatie Veronicakapel</h2>
