--- a/inner/contact.html
+++ b/inner/contact.html
@@ -12,6 +12,9 @@
 <body>
   <header>
     <div class="container">
+      <div class="col-12 text-center">
+        <img src="../banner.jpg" class="img-fluid banner" alt="Responsive image">
+      </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
