add banner almost correct, have to fix useless lines

--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 </head>
 
 <body>
+  <div class="header-row container-fluid no-padding no-margin mx-auto d-block" id="header-row">
+     <div class="container-fluid">
+        <div class="row container-fluid no-padding no-margin mx-auto d-block">
+           <div class="col-xs-12 container-fluid no-padding no-margin mx-auto d-block">
+              <a class="navbar-brand logo container-fluid no-padding" href="index.html">
+                 <img src="banner.jpg" class="container-fluid no-padding no-margin mx-auto d-block"alt="company logo">
+              </a>
+           </div>
+        </div>
+     </div>
+  </div>
   <header>
     <div class="container">
-      <div class="col-12 text-center">
-        <img src="banner.jpg" class="img-fluid banner" alt="Responsive image">
-      </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
