--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-  <div class="header-row container-fluid no-padding no-margin mx-auto d-block" id="header-row">
+  <div class="header-row" id="header-row">
      <div class="container-fluid">
-        <div class="row container-fluid no-padding no-margin mx-auto d-block">
+        <div class="row">
            <div class="col-xs-12 container-fluid no-padding no-margin mx-auto d-block">
               <a class="navbar-brand logo container-fluid no-padding" href="index.html">
-                 <img src="banner.jpg" class="container-fluid no-padding no-margin mx-auto d-block"alt="company logo">
+                 <img src="banner.jpg" class=""alt="company logo">
               </a>
            </div>
         </div>
