--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
            <div class="col-xs-12 container-fluid no-padding no-margin mx-auto d-block">
               <a class="navbar-brand logo container-fluid no-padding" href="index.html">
-                 <img src="banner.jpg" class=""alt="company logo">
+                 <img src="banner.jpg" class="container-fluid no-padding no-margin mx-auto d-block"alt="company logo">
               </a>
            </div>
         </div>
