--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="header-row" id="header-row">
+  <!--<div class="header-row" id="header-row">
      <div class="container-fluid">
         <div class="row">
            <div class="col-xs-12 container-fluid no-padding no-margin mx-auto d-block">
@@ -20,7 +20,7 @@
            </div>
         </div>
      </div>
-  </div>
+  </div>-->
   <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
