--- a/inner/contact.html
+++ b/inner/contact.html
@@ -11,17 +11,17 @@
 
 <body>
   <header>
-    <div class="header-row" id="header-row">
+    <!--<div class="header-row" id="header-row">
        <div class="container-fluid">
           <div class="row">
              <div class="col-xs-12 container-fluid no-padding no-margin mx-auto d-block">
                 <a class="navbar-brand logo container-fluid no-padding" href="index.html">
-                   <img src="banner.jpg" class="container-fluid no-padding no-margin mx-auto d-block"alt="company logo">
+                   <img src="../banner.jpg" class="container-fluid no-padding no-margin mx-auto d-block"alt="company logo">
                 </a>
              </div>
           </div>
        </div>
-    </div>
+    </div>-->
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
