fix maxwidth-992 images

--- a/inner/museum.html
+++ b/inner/museum.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="../bootstrap-4.3.1-dist/css/bootstrap.css" />
   <link rel="stylesheet" href="../style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>Zwin Rechteroever Museum</title>
 </head>
 
@@ -50,23 +51,23 @@
   <div class="container pt-3">
     <div class="row">
       <div class="col-12 text-center">
-        <h2 class="font-italic"> Ons museum</h2>
+        <h2 class="font-italic"> Ons Museum</h2>
       </div>
     </div>
     <div class="row pt-3 text-center">
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 pl-5  py-5 info">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 pl-5  py-5 info">
         <img src="kapel.jpg" class="img-fluid card-img-top" alt="Responsive image">
-        <h2  class="pt-4">Unieke locatie Veronicakapel</h2>
+        <h2  class="pt-4 pb-2">Unieke locatie Veronicakapel</h2>
         <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3  py-5 info">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3  py-5 info">
         <img src="archief.jpg" class="img-fluid card-img-top" alt="Responsive image">
-        <h2  class="pt-4">Unieke collectie</h2>
+        <h2  class="pt-4 pb-5">Unieke collectie</h2>
         <p>Wij beheren de stukken archief die niet meer in het archief zitten, hierdoor bezitten we unieke stukken zoals ellenlange geboortelijsten.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 pr-5 py-5 info">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 pr-5 py-5 info">
         <img src="bibliotheek.jpg" class="img-fluid card-img-top" alt="Responsive image">
-        <h2 class="pt-4">Uitgebreidde bibliotheek</h2>
+        <h2 class="pt-4 pb-2">Uitgebreidde bibliotheek</h2>
         <p>We beschikken over een grote collectie waarvan u gebruik kan maken om bij te leren en voor onderzoek.</p>
       </div>
     </div>
