--- a/inner/contact.html
+++ b/inner/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="../bootstrap-4.3.1-dist/css/bootstrap.css" />
   <link rel="stylesheet" href="../style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>Zwin Rechteroever Museum</title>
 </head>
 
