--- a/inner/contact.html
+++ b/inner/contact.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <div class="jumbotron">
+    <h1>Bootstrap Tutorial</h1>
+    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+  </div>
   <header>
     <!--<div class="header-row" id="header-row">
        <div class="container-fluid">
