--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
      </div>
   </div>-->
   <header>
-    <div class="jumbotron">
-      <h1>Bootstrap Tutorial</h1>
-      <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+    <div class="jumbotron text-center">
+      <div class="banner">
+         <h1>Zwin Rechteroever</h1>
+         <p>heemskundige kring</p>
+      </div>
     </div>
-    <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,8 +48,6 @@
           </ul>
         </div>
       </nav>
-
-    </div>
   </header>
 
 
