--- a/inner/contact.html
+++ b/inner/contact.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div class="jumbotron">
-    <h1>Bootstrap Tutorial</h1>
-    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+  <div class="jumbotron text-center">
+    <h1>Zwin Rechteroever</h1>
+    <p>heemskundige kring</p>
   </div>
   <header>
     <!--<div class="header-row" id="header-row">
