--- a/inner/museum.html
+++ b/inner/museum.html
@@ -23,9 +23,9 @@
      </div>
   </div>-->
   <header>
-    <div class="jumbotron">
-      <h1>Bootstrap Tutorial</h1>
-      <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+    <div class="jumbotron text-center">
+      <h1>Zwin Rechteroever</h1>
+      <p>heemskundige kring</p>
     </div>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
