add schild to jumbotron

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </div>-->
   <header>
     <div class="jumbotron text-center">
-      <div class="banner">
+      <div class="banner clearfix">
+        <img src="schild.jpg" class="float-left"  alt="">
+        <img src="schild.jpg" class="float-right"  alt="">
          <h1>Zwin Rechteroever</h1>
          <p>heemskundige kring</p>
       </div>
