--- a/inner/contact.html
+++ b/inner/contact.html
@@ -11,11 +11,15 @@
 </head>
 
 <body>
-  <div class="jumbotron text-center">
-    <h1>Zwin Rechteroever</h1>
-    <p>heemskundige kring</p>
-  </div>
   <header>
+  <div class="jumbotron text-center">
+    <div class="banner clearfix">
+      <img src="../schild.jpg" class="float-left"  alt="">
+      <img src="../schild.jpg" class="float-right"  alt="">
+       <h1>Zwin Rechteroever</h1>
+       <p>heemskundige kring</p>
+    </div>
+
     <!--<div class="header-row" id="header-row">
        <div class="container-fluid">
           <div class="row">
