--- a/inner/museum.html
+++ b/inner/museum.html
@@ -24,9 +24,12 @@
   </div>-->
   <header>
     <div class="jumbotron text-center">
-      <h1>Zwin Rechteroever</h1>
-      <p>heemskundige kring</p>
-    </div>
+      <div class="banner clearfix">
+        <img src="../schild.jpg" class="float-left"  alt="">
+        <img src="../schild.jpg" class="float-right"  alt="">
+         <h1>Zwin Rechteroever</h1>
+         <p>heemskundige kring</p>
+      </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
