changed backgroundcolors and textcolor( contact)

--- a/inner/contact.html
+++ b/inner/contact.html
@@ -55,8 +55,8 @@
 
   <div class="container pt-5">
     <div class="row pt-5 text-center">
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info">
-        <h2 class="font-italic">Contactpagina</h2>
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
+        <h2 class="font-italic contact">Contactpagina</h2>
         <h3>Adres</h3>
         <p>Rode-Ossenstraat 123 Damme</p>
         <h3>E-mailadres</h3>
@@ -64,7 +64,7 @@
         <h3>telefoonnummer</h3>
         <p>(123) 456 7890</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email addres</label>
@@ -85,7 +85,7 @@
           <button type="submit" class="btn btn-outline-info border-0">versturen</button>
         </form>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
         <img src="contact.jpg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
