--- a/inner/museum.html
+++ b/inner/museum.html
@@ -53,12 +53,10 @@
 
 
   <div class="container pt-3">
-    <div class="row">
-      <div class="col-12 text-center">
+    <div class="row pt-3 text-center">
+      <div class="col-12 text-center p-0">
         <h2 class="font-italic"> Ons Museum</h2>
       </div>
-    </div>
-    <div class="row pt-3 text-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info">
         <img src="kapel.jpg" class="img-fluid card-img-top" alt="Responsive image">
         <h2  class="pt-4 pb-2">Unieke locatie Veronicakapel</h2>
