--- a/inner/contact.html
+++ b/inner/contact.html
@@ -82,7 +82,7 @@
             <label for="exampleFormControlTextarea1">Uw bericht</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-outline-info border-0">versturen</button>
+          <button type="submit" class="btn">versturen</button>
         </form>
       </div>
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
