--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <div class="container pt-5">
     <div class="row justify-content-end row-height pt-5">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 py-5 info ">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-4 py-5 info border">
         <h2>Wat doen we?</h2>
         <p>Verzamelen, klasseren en bewaren van de informatie over de geschiedenis van de regio tussen Damme en Brugge</p>
         <h2>Waar?</h2>
