--- a/inner/museum.html
+++ b/inner/museum.html
@@ -54,20 +54,20 @@
 
   <div class="container pt-3">
     <div class="row pt-3 text-center">
-      <div class="col-12 text-center p-0">
-        <h2 class="font-italic"> Ons Museum</h2>
+      <div class="col-12 text-center p-0 ">
+        <h2 class="font-italic border rounded"> Ons Museum</h2>
       </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info border">
         <img src="kapel.jpg" class="img-fluid card-img-top" alt="Responsive image">
         <h2  class="pt-4 pb-2">Unieke locatie Veronicakapel</h2>
         <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3  py-5 info">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3  py-5 info border">
         <img src="archief.jpg" class="img-fluid card-img-top" alt="Responsive image">
         <h2  class="pt-4 pb-5">Unieke collectie</h2>
         <p>Wij beheren de stukken archief die niet meer in het archief zitten, hierdoor bezitten we unieke stukken zoals ellenlange geboortelijsten.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info border">
         <img src="bibliotheek.jpg" class="img-fluid card-img-top" alt="Responsive image">
         <h2 class="pt-4 pb-2">Uitgebreidde bibliotheek</h2>
         <p>We beschikken over een grote collectie waarvan u gebruik kan maken om bij te leren en voor onderzoek.</p>
