--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   <div class="container pt-5">
     <div class="row justify-content-end row-height pt-5">
       <div class="col-12 col-sm-12 col-md-6 col-lg-4 py-5 info border">
-        <h2>Wat doen we?</h2>
+        <h2><u>Wat doen we?</u></h2>
         <p>Verzamelen, klasseren en bewaren van de informatie over de geschiedenis van de regio tussen Damme en Brugge</p>
-        <h2>Waar?</h2>
+        <h2><u>Waar?</u></h2>
         <p>We hebben een centrum waar we u graag ontvangen van dindsag tot zaterdag vanaf 10uur tot 17uur, adress: Rode-Ossenstraat 123 Damme</p>
       </div>
     </div>
