--- a/inner/contact.html
+++ b/inner/contact.html
@@ -85,7 +85,7 @@
           <button type="submit" class="btn">versturen</button>
         </form>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact conimg">
         <img src="contact.jpg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
