--- a/inner/contact.html
+++ b/inner/contact.html
@@ -57,11 +57,11 @@
     <div class="row pt-5 text-center">
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
         <h2 class="font-italic contact">Contactpagina</h2>
-        <h3>Adres</h3>
+        <h3><u>Adres</u></h3>
         <p>Rode-Ossenstraat 123 Damme</p>
-        <h3>E-mailadres</h3>
+        <h3><u>E-mailadres</u></h3>
         <p>zwinrechteroever@heemskundigekring.be</p>
-        <h3>telefoonnummer</h3>
+        <h3><u>telefoonnummer</u></h3>
         <p>(123) 456 7890</p>
       </div>
       <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-3 py-5 info contact">
