changed title on museum

--- a/inner/contact.html
+++ b/inner/contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../bootstrap-4.3.1-dist/css/bootstrap.css" />
   <link rel="stylesheet" href="../style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <title>Zwin Rechteroever Museum</title>
+  <title>Zwin Rechteroever</title>
 </head>
 
 <body>
