--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2><u>Wat doen we?</u></h2>
         <p>Verzamelen, klasseren en bewaren van de informatie over de geschiedenis van de regio tussen Damme en Brugge</p>
         <h2><u>Waar?</u></h2>
-        <p>We hebben een centrum waar we u graag ontvangen van dindsag tot zaterdag vanaf 10uur tot 17uur, adress: Rode-Ossenstraat 123 Damme</p>
+        <p>We hebben een centrum waar we u graag ontvangen van dindsag tot zaterdag vanaf 10uur tot 17uur <br>adress: Rode-Ossenstraat 123 Damme</p>
       </div>
     </div>
   </div>
