--- a/inner/museum.html
+++ b/inner/museum.html
@@ -60,7 +60,7 @@
       <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info border">
         <img src="kapel.jpg" class="img-fluid card-img-top" alt="Responsive image">
         <h2 class="pt-4 pb-2"><u>Unieke locatie Veronicakapel</u></h2>
-        <p>Gelegen op pattatenveld 3, Damme. Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
+        <p>Gelegen op pattatenveld 3, Damme. <br>Deze locatie wordt als uniek bestempelt maar ongeacht dit mediumgegeven blijven wij als heemkundige onderzoekers heel gewoon.</p>
       </div>
       <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3  py-5 info border">
         <img src="archief.jpg" class="img-fluid card-img-top" alt="Responsive image">
