--- a/inner/museum.html
+++ b/inner/museum.html
@@ -75,6 +75,12 @@
     </div>
   </div>
 
+  <footer class="page-footer font-small blue mt-5 info">
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+      <a href="https://github.com/SimonRijsselaere"> Simon Rijsselaere</a>
+    </div>
+  </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
