add right source for images in inner folder

--- a/inner/contact.html
+++ b/inner/contact.html
@@ -14,8 +14,8 @@
   <header>
     <div class="jumbotron text-center">
       <div class="banner clearfix">
-        <img src="schild.jpg" class="float-left d-none d-sm-block" alt="">
-        <img src="schild.jpg" class="float-right d-none d-sm-block" alt="">
+        <img src="../schild.jpg" class="float-left d-none d-sm-block" alt="">
+        <img src="../schild.jpg" class="float-right d-none d-sm-block" alt="">
         <h1>Zwin Rechteroever</h1>
         <p>heemskundige kring</p>
       </div>
