--- a/inner/museum.html
+++ b/inner/museum.html
@@ -19,6 +19,7 @@
         <h1>Zwin Rechteroever</h1>
         <p>heemskundige kring</p>
       </div>
+    </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
