fix spelling error

--- a/inner/museum.html
+++ b/inner/museum.html
@@ -59,7 +59,7 @@
       </div>
       <div class="col-12 col-sm-12 col-md-12 col-lg-4 px-3 py-5 info border">
         <img src="bibliotheek.jpg" class="img-fluid card-img-top" alt="Responsive image">
-        <h2 class="pt-4 pb-2"><u>Uitgebreidde bibliotheek</u></h2>
+        <h2 class="pt-4 pb-2"><u>Uitgebreide bibliotheek</u></h2>
         <p>We beschikken over een grote collectie waarvan u gebruik kan maken om bij te leren en voor onderzoek.</p>
       </div>
     </div>
