--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="zwinrechteroever" content="This is the site for the local Belgian history group Zwin Rechteroever">
+  <meta name="description" content="This is the site for the local Belgian history group Zwin Rechteroever">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css" />
   <link rel="stylesheet" href="style.css">
